goolge-k8s-grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: tools
  labels:
    app: grafana
    component: core
spec:
  ports:
    - port: 80
  selector:
    app: grafana
    component: core
