goolge-k8s-grafana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fuchicorp-grafana
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:

  - host: grafana.fuchicorp.com
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 8081

  - host: vault.fuchicorp.com
    http:
      paths:
      - backend:
          serviceName: vault-service
          servicePort: 8084

  - host: nexus.fuchicorp.com
    http:
      paths:
      - backend:
          serviceName: nexus-service
          servicePort: 8083

  - host: jira.fuchicorp.com
    http:
      paths:
      - backend:
          serviceName: jira
          servicePort: 8084

  - host: jenkins.fuchicorp.com
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
